[package]
name = "star-wars"
version = "0.1.0"
authors = ["Kal-El-pt2 <f20220052@hyderabad.bits-pilani.ac.in>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
